--- a/docs/articles/01-开始/01-开始/02-安装.md
+++ b/docs/articles/01-开始/01-开始/02-安装.md
@@ -1,5 +1,19 @@
 # 安装
 
-```bash
+## 包管理器
+
+::: code-group
+
+```bash [npm]
 npm i @fang-kang/js-utils
 ```
+
+```bash [yarn]
+yarn add @fang-kang/js-utils
+```
+
+```bash [pnpm]
+pnpm add @fang-kang/js-utils
+```
+
+:::
