--- a/docs/articles/01-开始/02-方法/字符串.md
+++ b/docs/articles/01-开始/02-方法/字符串.md
@@ -71,6 +71,7 @@ import { trim } from '@fang-kang/js-utils';
  * 删除空格
  * @param { string } s 字符串
  * @param { TrimType } type 所有 ｜ 前置 ｜ 前后 ｜ 后置 'all' | 'pre' | 'around' | 'post'
+ * @defalut around
  * @returns
  */
 ```
