--- a/docs/articles/01-开始/02-方法/数字.md
+++ b/docs/articles/01-开始/02-方法/数字.md
@@ -11,10 +11,10 @@ const a = 2;
 
 const b = 1;
 
-calc(`${a}+${b}`); // 3
-calc(`${a}-${b}`); // 1
-calc(`${a}*${b}`); // 2
-calc(`${a}/${b}`); // 2
+calc(`${a}+${b}`)._value; // 3
+calc(`${a}-${b}`)._value; // 1
+calc(`${a}*${b}`)._value; // 2
+calc(`${a}/${b}`)._value; // 2
 
 // 格式化
 
@@ -23,10 +23,12 @@ calc('1').format(); // 1.00
 
 ## uppercaseNum
 
-返回大写数字
+返回大写人民币
 
 ```typescript
 import { uppercaseNum } from '@fang-kang/js-utils';
 
-uppercaseNum(1); // '一'
+uppercaseNum(1.5); // '壹元伍角'
+
+uppercaseNum(100); // '壹佰元整'
 ```
