--- a/docs/articles/01-开始/02-方法/数组.md
+++ b/docs/articles/01-开始/02-方法/数组.md
@@ -1,19 +1,5 @@
 # 数组
 
-## arrayEqual
-
-判断两个数组是否相等
-
-```typescript
-import { arrayEqual } from '@fang-kang/js-utils';
-
-const arr1 = [1, 2, 3];
-
-const arr2 = [1, 2, 3];
-
-arrayEqual(arr1, arr2); // true
-```
-
 ## uniqueArray
 
 简单数组去重
@@ -90,6 +76,16 @@ const sortArr = sortCompare(arr, order);
 ```typescript
 import { getArrayValue } from '@fang-kang/js-utils';
 
+/**
+ * {
+  arr,
+  value,
+  valueKey = 'value',
+  labelKey = 'label',
+  defaultValue = undefined,
+}
+ */
+
 const arr = [
   {
     label: '1',
@@ -101,7 +97,7 @@ const arr = [
   },
 ];
 
-getArrayValue({ arr, value: '2', valueKey: 'value', labelKey: 'label' });
+getArrayValue({ arr, value: '2' });
 
 /**
  * {
