--- a/docs/articles/01-开始/02-方法/类型转换.md
+++ b/docs/articles/01-开始/02-方法/类型转换.md
@@ -7,6 +7,9 @@
 ```typescript
 import { arrayToTree } from '@fang-kang/js-utils';
 
+/**
+ *  const { arr, idKey = 'id', parentKey = 'pid', childrenKey = 'children', rootId = 0 } = params;
+ */
 const arr = [
   { id: 1, name: '部门1', pid: 0 },
   { id: 2, name: '部门2', pid: 1 },
@@ -15,7 +18,7 @@ const arr = [
   { id: 5, name: '部门5', pid: 4 },
 ];
 
-const tree = arrayToTree({ arr, idKey: 'id', parentKey: 'pid', childrenKey: 'children', rootId: 0 });
+const tree = arrayToTree({ arr });
 
 /**
  * [
