--- a/docs/articles/01-开始/02-方法/日期.md
+++ b/docs/articles/01-开始/02-方法/日期.md
@@ -9,3 +9,23 @@ import { formatDate } from '@fang-kang/js-utils';
 
 formatDate(new Date(), 'yyyy-MM-dd');
 ```
+
+## isAfterDate
+
+检查是否在某日期后
+
+```typescript
+import { isAfterDate } from '@fang-kang/js-utils';
+
+isAfterDate(new Date(2010, 10, 21), new Date(2010, 10, 20)); // true
+```
+
+## isBeforeDate
+
+检查是否在某日期前
+
+```typescript
+import { isBeforeDate } from '@fang-kang/js-utils';
+
+isBeforeDate(new Date(2010, 10, 20), new Date(2010, 10, 21)); // true
+```
