--- a/docs/articles/01-开始/02-方法/浏览器.md
+++ b/docs/articles/01-开始/02-方法/浏览器.md
@@ -50,6 +50,18 @@ import { exitFullscreen } from '@fang-kang/js-utils';
 exitFullscreen();
 ```
 
+## getFullscreenElement
+
+获取当前全屏的节点
+
+```typescript
+import { getFullscreenElement } from '@fang-kang/js-utils';
+
+getFullscreenElement();
+// 假设 document.documentElement 当前为全屏状态则
+document.documentElement === getFullscreenElement();
+```
+
 ## getScrollTop
 
 获取滚动条距顶部的距离
@@ -68,6 +80,26 @@ getScrollTop();
 import { setScrollTop } from '@fang-kang/js-utils';
 
 setScrollTop(100);
+```
+
+## scrollToTop
+
+返回顶部
+
+```typescript
+import { scrollToTop } from '@fang-kang/js-utils';
+
+scrollToTop();
+```
+
+## scrollToElement
+
+可将指定元素平滑滚动到浏览器窗口的可见区域
+
+```typescript
+import { scrollToElement } from '@fang-kang/js-utils';
+
+smoothScroll('#fooBar');
 ```
 
 ## getOS
@@ -98,4 +130,106 @@ getUrlParams();
 import { stringfyQueryString } from '@fang-kang/js-utils';
 
 stringfyQueryString({ a: 1, b: 2 }); // a=1&b=2
+```
+
+## getInnerHTML
+
+获取 HTML 字符串中的文本内容
+
+```typescript
+import { getInnerHTML } from '@fang-kang/js-utils';
+
+getInnerHTML(`<div>123</div>`); // 123
+```
+
+## injectScript
+
+动态引入 js
+
+```typescript
+import { injectScript } from '@fang-kang/js-utils';
+
+injectScript('https://unpkg.com/@fang-kang/js-utils');
+```
+
+## downloadByUrl
+
+根据 url 下载文件
+
+```typescript
+import { downloadByUrl } from '@fang-kang/js-utils';
+
+downloadByUrl('https://unpkg.com/@fang-kang/js-utils', 'js-utils.js');
+```
+
+## elementIsVisibleInViewport
+
+el 是否在视口范围内
+
+```typescript
+import { elementIsVisibleInViewport } from '@fang-kang/js-utils';
+
+elementIsVisibleInViewport(document.querySelector('#app') as HTMLElement);
+```
+
+## copyTextToClipboard
+
+劫持粘贴板
+
+```typescript
+import { copyTextToClipboard } from '@fang-kang/js-utils';
+
+copyTextToClipboard('复制的内容');
+```
+
+## hideElement
+
+隐藏所有的指定标签
+
+```typescript
+import { hideElement } from '@fang-kang/js-utils';
+
+hideElement(document.querySelectorAll('img')); // 隐藏所有<img>标签
+```
+
+## httpsRedirect
+
+`HTTP` 跳转 `HTTPS`
+
+```typescript
+import { httpsRedirect } from '@fang-kang/js-utils';
+
+httpsRedirect(); // 若在`http://www.baidu.com`, 则跳转到`https://www.baidu.com`
+```
+
+## insertAfter
+
+在指定元素之后插入新元素
+
+```typescript
+import { insertAfter } from '@fang-kang/js-utils';
+
+// <div id="myId">...</div> <p>after</p>
+insertAfter(document.getElementById('myId'), '<p>after</p>');
+```
+
+## insertBefore
+
+在指定元素之后插入新元素
+
+```typescript
+import { insertBefore } from '@fang-kang/js-utils';
+
+insertBefore(document.getElementById('myId'), '<p>before</p>');
+// <p>before</p> <div id="myId">...</div>
+```
+
+## escapeHTML
+
+用来防 XSS 攻击
+
+```typescript
+import { escapeHTML } from '@fang-kang/js-utils';
+
+escapeHTML('<a href="#">Me & you</a>'); // '&lt;a href=&quot;#&quot;&gt;Me &amp; you&lt;/a&gt;
 ```
