--- a/docs/articles/01-开始/02-方法/类型转换.md
+++ b/docs/articles/01-开始/02-方法/类型转换.md
@@ -136,3 +136,13 @@ import { toNumber } from '@fang-kang/js-utils';
 
 toNumber('111'); // 111
 ```
+
+## byteToFileSize
+
+将字节转换为合理的容量单位
+
+```typescript
+import { byteToFileSize } from '@fang-kang/js-utils';
+
+byteToFileSize(1024000000); // 976.6 MB
+```
