--- a/docs/articles/01-开始/01-开始/01-介绍.md
+++ b/docs/articles/01-开始/01-开始/01-介绍.md
@@ -1,5 +1,13 @@
 # 介绍
 
+<p class="guide">
+<a href="https://www.npmjs.com/package/@fang-kang/js-utils" target="__blank"><img src="https://img.shields.io/npm/v/@fang-kang/js-utils" alt="NPM version"></a>
+<a href="https://www.npmjs.com/package/@fang-kang/js-utils" target="__blank"><img alt="NPM Downloads" src="https://img.shields.io/npm/dm/@fang-kang/js-utils"></a>
+<a href="https://github.com/vuejs/vitepress" target="__blank"><img src="https://img.shields.io/badge/docs%20by-vitepress-blue?style=flat-square" alt="Docs & Demos"></a>
+<img alt="npm bundle size" src="https://img.shields.io/bundlephobia/min/@fang-kang/js-utils">
+<a href="https://github.com/fang-kang/js-utils" target="__blank"><img alt="GitHub stars" src="https://img.shields.io/github/stars/fang-kang/js-utils?style=social"></a>
+</p>
+
 ## 什么是 js-utils？
 
 [@fang-kang/js-utils](https://github.com/fang-kang/js-utils)，是一个纯 javascript 实现的开箱即用工具库,主要用于简化开发过程，提高开发效率。
