--- a/docs/articles/01-开始/01-开始/02-安装.md
+++ b/docs/articles/01-开始/01-开始/02-安装.md
@@ -1,5 +1,29 @@
 # 安装
 
+## CDN
+
+```html
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+  </head>
+  <body>
+    <script src="https://unpkg.com/@fang-kang/js-utils"></script>
+    <script>
+      const { isArray, isBool } = JsUtils;
+      console.log(isArray([])); // true
+      console.log(isBool(true)); // true
+    </script>
+  </body>
+</html>
+```
+
+它将以 `window.JsUtils` 的形式暴露给全局
+
 ## 包管理器
 
 ::: code-group
