fix(getSize、calc、once): fix bug

--- a/docs/articles/01-开始/02-方法/数字.md
+++ b/docs/articles/01-开始/02-方法/数字.md
@@ -11,10 +11,10 @@ const a = 2;
 
 const b = 1;
 
-calc(`${a}+${b}`)._value; // 3
-calc(`${a}-${b}`)._value; // 1
-calc(`${a}*${b}`)._value; // 2
-calc(`${a}/${b}`)._value; // 2
+calc(`${a}+${b}`).value; // 3
+calc(`${a}-${b}`).value; // 1
+calc(`${a}*${b}`).value; // 2
+calc(`${a}/${b}`).value; // 2
 
 // 格式化
 
