feat: update method

--- a/docs/articles/01-开始/02-方法/浏览器.md
+++ b/docs/articles/01-开始/02-方法/浏览器.md
@@ -102,14 +102,14 @@ import { scrollToElement } from '@fang-kang/js-utils';
 smoothScroll('#fooBar');
 ```
 
-## getOS
+## getDevice
 
-获取操作系统类型
+获取系统信息
 
 ```typescript
-import { getOS } from '@fang-kang/js-utils';
+import { getDevice } from '@fang-kang/js-utils';
 
-getOS();
+console.log(getDevice()); // { os: 'android', dev: 'chrome' }
 ```
 
 ## getUrlParams
@@ -232,4 +232,128 @@ insertBefore(document.getElementById('myId'), '<p>before</p>');
 import { escapeHTML } from '@fang-kang/js-utils';
 
 escapeHTML('<a href="#">Me & you</a>'); // '&lt;a href=&quot;#&quot;&gt;Me &amp; you&lt;/a&gt;
+```
+
+## monitorPef
+
+检测性能指标
+
+```typescript
+import { monitorPef } from '@fang-kang/js-utils';
+```
+
+## timeCost
+
+检测函数执行耗时
+
+```typescript
+import { timeCost } from '@fang-kang/js-utils';
+```
+
+## createElement
+
+创建元素和属性
+
+```typescript
+import { createElement } from '@fang-kang/js-utils';
+
+const p = createElement('p', {
+  id: 'test',
+  class: 'test',
+  style: 'xxx',
+});
+```
+
+## createFragment
+
+创建 fragment
+
+```typescript
+import { createFragment } from '@fang-kang/js-utils';
+
+createFragment();
+```
+
+## createTextNode
+
+创建 TextNode
+
+```typescript
+import { createTextNode } from '@fang-kang/js-utils';
+
+createFragment();
+```
+
+## findElement
+
+查找元素
+
+```typescript
+import { findElement } from '@fang-kang/js-utils';
+
+/**
+ * @param { string | string[] } selector 选择器
+ * @param { boolean } all 是否返回所有
+ * @param { HTMLElement } currentNode 当前节点 默认为 document
+ */
+
+const p = findElement('p'); // 查找第一个 p 标签
+const p = findElement('p', true); // 查找所有 p 标签
+const result = findElement(['p', 'div']); // 查找第一个 p 标签和 div 标签
+const result = findElement(['p', 'div'], true); // 查找所有 p 标签和 div 标签
+```
+
+## removeElement
+
+查找元素
+
+```typescript
+import { removeElement } from '@fang-kang/js-utils';
+
+const div = removeElement('div');
+removeElement(div); // 将div元素从父节点中移除
+```
+
+## useInterval
+
+定时器执行函数
+
+```typescript
+import { useInterval } from '@fang-kang/js-utils';
+
+/**
+ * @param { () => void } fn 执行函数
+ * @param { number } duration 间隔时间
+ * @return { () => void } 停止事件监听函数
+ */
+
+// 每秒打印一次
+let count = 0;
+const stop = useInterval(() => {
+  console.log('hi');
+  count++;
+}, 1000);
+// 第五次后停止
+if (count === 5) {
+  stop();
+}
+```
+
+## useTimeout
+
+定时器执行函数
+
+```typescript
+import { useTimeout } from '@fang-kang/js-utils';
+
+/**
+ * @param { () => void } fn 执行函数
+ * @param { number } duration 间隔时间
+ * @return { () => void } 停止事件监听函数
+ */
+
+// 一秒后打印
+const stop = useTimeout(() => {
+  console.log('hi');
+}, 1000);
 ```
