--- a/docs/articles/01-开始/02-方法/类型转换.md
+++ b/docs/articles/01-开始/02-方法/类型转换.md
@@ -146,3 +146,61 @@ import { byteToFileSize } from '@fang-kang/js-utils';
 
 byteToFileSize(1024000000); // 976.6 MB
 ```
+
+## toAbsolutePath
+
+将相对路径转换为绝对路径
+
+```typescript
+import { toAbsolutePath } from '@fang-kang/js-utils';
+
+toAbsolutePath('/a/b/c'); // http://localhost:8080/a/b/c
+```
+
+## toBase64
+
+将 url、File、Blob 类型转换为 base64
+
+```typescript
+import { toBase64 } from '@fang-kang/js-utils';
+
+const file = new File([''], 'test.png');
+toBase64(file).then((res) => {
+  console.log(res); // data:image/png;base64,
+});
+```
+
+## toObject
+
+将数组转换成对象
+
+```typescript
+import { toObject } from '@fang-kang/js-utils';
+
+/**
+ * @param { Array<any> } arr 数组
+ * @param { string[] = [] } filter 保留filter中的key
+ * @return { boolean }
+ */
+
+const arr = [
+  {
+    a: 1,
+  },
+  {
+    a: 3,
+    3: 5,
+  },
+];
+const data = toObject(arr, ['a']); // { a: [ 1, 3 ] }
+```
+
+## toPxNum
+
+将长度单位转换为数字
+
+```typescript
+import { toPxNum } from '@fang-kang/js-utils';
+
+toPxNum();
+```
